.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Data_Set__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>Dataplier__Filter__c</referenceTo>
        <relationshipLabel>Data Sets</relationshipLabel>
        <relationshipName>Data_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dataplier__Key_Fields__c</fullName>
        <label>Object Key Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__LimitFilterOption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Omit invalid records with empty lookups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataplier__LimitFilter__c</fullName>
        <label>Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Limit_Chunk_Bulk__c</fullName>
        <label>Limit Chunk Bulk</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Masked_Fields__c</fullName>
        <label>Masked Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Object_Fields__c</fullName>
        <label>Object Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INSERT</fullName>
                    <default>true</default>
                    <label>INSERT</label>
                </value>
                <value>
                    <fullName>UPSERT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__Query__c</fullName>
        <label>Query Where Clause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__is_Custom_Where_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Custom Where Clause</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Set</label>
    <listViews>
        <fullName>Dataplier__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Sets</pluralLabel>
    <recordTypes>
        <fullName>Dataplier__DataSet</fullName>
        <active>true</active>
        <description>for test</description>
        <label>DataSet</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>